2015-03-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/pid_jump/dataview.ods: Deleted.
	* experiments/pid_jump/pid-data.ods: Updated with latest flight data.
	* experiments/pid_jump/pid_jump.py
	(MotorPidJumpExample._connected): Clarify meaning of ASL and
	normalize, using raw values.
	(MotorJumpExample._jump_motors): Use explicit initial value of
	ASL, based on understanding of its meaning.

2015-03-09  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/pid_jump/pid_jump.py
	(MotorPidJumpExample._log_data): Don't invert yaw.
	(MotorJumpExample._jump_motors): Set init values that seem to work
	for roll, pitch and yaw.  Set Kp for roll, pitch and yaw by
	experiment.  Rename thrust_ctrl to aslCtrl.  Wider thrust limits.
	Output of control is change to roll, pitch and yaw, not absolute
	value.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/pid_jump/pid-data.ods: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	First attempt at a PID controller for hovering.

	* experiments/pid_jump/dataview.ods: Created.
	* experiments/pid_jump/pid_jump.py: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/jump/dataview.ods: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/jump/jump.py: Better commenting.
	(MotorJumpExample.__init__): Private instance variables for class
	wide constants, timestamp, log variables and log variable
	averages.
	(MotorJumpExample._connected): Single log for all variables.
	(MotorJumpExample._log_data): Keep all data in instance variables.
	(MotorJumpExample._iir_filter): Created.
	(MotorJumpExample._jump_motors): Simplified logic.

2015-03-02  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Add some experimental scripts

	* experiments: Created.
	* experiments/basiclog/basiclog.py: Created.
	* experiments/jump/jump.py: Created.
	* experiments/ramp/ramp.py: Created.
	* experiments/test/test.py: Created.
