@@ -1,5 +1,12 @@
 2015-03-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>
 
+	Attempt to implement the "alt hold" functionality.  Holding level
+	works, going up/down does not.
+
+	* experiments/alt_hold/alt_hold.py:
+
+2015-03-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>
+
 	* experiments/pid_jump/dataview.ods: Deleted.
 	* experiments/pid_jump/pid-data.ods: Updated with latest flight data.
 	* experiments/pid_jump/pid_jump.py
